Refactor some code at 1770201115